--- a/.github/workflows/build-check-grpcserver.yml
+++ b/.github/workflows/build-check-grpcserver.yml
@@ -68,13 +68,13 @@ jobs:
   #     - name: Test Healthcheck Endpoint
   #       run: |
   #         for i in {1..20}; do
-  #           STATUS=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:9999/healthz)
+  #           STATUS=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:5300/healthz)
   #           echo "Attempt $i: Status $STATUS"            
   #           if [ "$STATUS" -eq 200 ]; then
   #             echo "Healthcheck passed with status $STATUS"
   #             exit 0
   #           else
-  #             echo "Healthcheck attempt $i failed with status $STATUS. Retrying..."
+  #             echo "Healthcheck attempt $i failed with status $STATUS. Retrying in 5 seconds..."
   #             sleep 5
   #           fi
   #         done
