--- a/.github/workflows/build-check-identityapi.yml
+++ b/.github/workflows/build-check-identityapi.yml
@@ -69,12 +69,12 @@ jobs:
         run: |
           for i in {1..20}; do
             STATUS=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:5200/healthz)
-            echo "Attempt $i: Status $STATUS"            
+            echo "Attempt $i: Status $STATUS"
             if [ "$STATUS" -eq 200 ]; then
               echo "Healthcheck passed with status $STATUS"
               exit 0
             else
-              echo "Healthcheck attempt $i failed with status $STATUS. Retrying..."
+              echo "Healthcheck attempt $i failed with status $STATUS. Retrying in 5 seconds..."
               sleep 5
             fi
           done
