Feat: Dockerfiles cleanup

--- a/src/GrpcServer/Dockerfile
+++ b/src/GrpcServer/Dockerfile
@@ -9,7 +9,9 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
-    clang zlib1g-dev
+    clang zlib1g-dev \
+    && rm -rf /var/lib/apt/lists/* \
+    && apt-get clean
 
 ARG AOT
 ARG TRIM
