--- a/.github/workflows/main-release-grpcserver.yml
+++ b/.github/workflows/main-release-grpcserver.yml
@@ -119,18 +119,13 @@ jobs:
   #         echo "Healthcheck failed after 20 attempts."
   #         exit 1
 
-#   deploy-image-azure:
-#     runs-on: ubuntu-latest
-#     needs: build-push-image
-#     # environment:
-#     #   name: 'production'
-#     #   url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-#     steps:
-#       - name: Deploy Image to Azure Web App
-#         id: deploy-image-webapp
-#         uses: azure/webapps-deploy@v2
-#         with:
-#             app-name: 'api-cpnucleo'
-#             publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE  }}
-#             images: 'index.docker.io/jonathanperis/cpnucleo-identity-api:latest'
+  deploy-image-azure:
+    needs: build-push-image
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy Image to Azure Web App
+        uses: azure/webapps-deploy@v2
+        with:
+            app-name: 'cpnucleo-grpc-server'
+            publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_GRPCSERVER }}
+            images: 'index.docker.io/jonathanperis/cpnucleo-grpc-server:latest'
