--- a/src/GrpcServer/appsettings.json
+++ b/src/GrpcServer/appsettings.json
@@ -15,5 +15,9 @@
   "AspNetCoreInstrumentation": {
     "RecordException": "true"
   },
-  "AllowedHosts": "*"
+  "Kestrel": {
+    "EndpointDefaults": {
+      "Protocols": "Http2"
+    }
+  }
 }
