--- a/.github/workflows/main-release-identityapi.yml
+++ b/.github/workflows/main-release-identityapi.yml
@@ -11,7 +11,8 @@ env:
   TRIM: true
   EXTRA_OPTIMIZE: true
   BUILD_CONFIGURATION: Release  
-      
+  ASPNETCORE_ENVIRONMENT: Production
+
 jobs:
   setup-build-test:
     runs-on: ubuntu-latest
@@ -86,8 +87,7 @@ jobs:
             TRIM=${{ env.TRIM }}
             EXTRA_OPTIMIZE=${{ env.EXTRA_OPTIMIZE }}
             BUILD_CONFIGURATION=${{ env.BUILD_CONFIGURATION }}
-          secret-envs	: |
-            ConnectionStrings__DefaultConnection=${{ secrets.DB_CONNECTION_STRING }}
+            ASPNETCORE_ENVIRONMENT=${{ env.ASPNETCORE_ENVIRONMENT }}
 
   container-test:
     needs: build-push-image
