--- a/src/GrpcServer/Dockerfile
+++ b/src/GrpcServer/Dockerfile
@@ -17,6 +17,7 @@ ARG AOT
 ARG TRIM
 ARG EXTRA_OPTIMIZE
 ARG BUILD_CONFIGURATION
+ARG ASPNETCORE_ENVIRONMENT
 
 WORKDIR /src
 
@@ -41,6 +42,7 @@ FROM base AS final
 
 WORKDIR /app
 ENV ASPNETCORE_URLS=http://+:5020
+ENV ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT}
 EXPOSE 5020
 
 COPY --from=publish /app/publish .
