--- a/src/WebApi/Dockerfile
+++ b/src/WebApi/Dockerfile
@@ -17,6 +17,7 @@ ARG AOT
 ARG TRIM
 ARG EXTRA_OPTIMIZE
 ARG BUILD_CONFIGURATION
+ARG ASPNETCORE_ENVIRONMENT
 
 WORKDIR /src
 
@@ -40,6 +41,7 @@ RUN dotnet publish "WebApi.csproj" --no-restore -c $BUILD_CONFIGURATION -p:AOT=$
 FROM base AS final
 
 WORKDIR /app
+ENV ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT}
 EXPOSE 8080
 
 COPY --from=publish /app/publish .
