--- a/src/WebClient/Dockerfile
+++ b/src/WebClient/Dockerfile
@@ -17,6 +17,7 @@ ARG AOT
 ARG TRIM
 ARG EXTRA_OPTIMIZE
 ARG BUILD_CONFIGURATION
+ARG ASPNETCORE_ENVIRONMENT
 
 WORKDIR /src
 
@@ -38,6 +39,7 @@ FROM base AS final
 
 WORKDIR /app
 ENV ASPNETCORE_URLS=http://+:5030
+ENV ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT}
 EXPOSE 5030
 
 COPY --from=publish /app/publish .
