--- a/.github/workflows/main-release-identityapi.yml
+++ b/.github/workflows/main-release-identityapi.yml
@@ -11,8 +11,7 @@ env:
   TRIM: true
   EXTRA_OPTIMIZE: true
   BUILD_CONFIGURATION: Release  
-  ASPNETCORE_ENVIRONMENT: Production
-
+      
 jobs:
   setup-build-test:
     runs-on: ubuntu-latest
@@ -87,7 +86,8 @@ jobs:
             TRIM=${{ env.TRIM }}
             EXTRA_OPTIMIZE=${{ env.EXTRA_OPTIMIZE }}
             BUILD_CONFIGURATION=${{ env.BUILD_CONFIGURATION }}
-            ASPNETCORE_ENVIRONMENT=${{ env.ASPNETCORE_ENVIRONMENT }}
+          secret-envs	: |
+            ConnectionStrings__DefaultConnection=${{ secrets.DB_CONNECTION_STRING }}
 
   container-test:
     needs: build-push-image
