--- a/.env
+++ b/.env
@@ -1,7 +1,17 @@
-# Database credentials
+# Database configuration
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=cpnucleo
 
-# Connection string for API services (using variable substitution)
-API_CONNECTION_STRING=Host=db;Username=${POSTGRES_USER};Password=${POSTGRES_PASSWORD};Database=${POSTGRES_DB};Minimum Pool Size=10;Maximum Pool Size=10;Multiplexing=true
+# Database connection string
+# Note: The connection string format may vary based on the database driver used
+# This example uses Npgsql for PostgreSQL
+# The connection string includes parameters for connection pooling
+# and multiplexing, which are important for performance in a microservices architecture
+DB_CONNECTION_STRING=Host=db;Username=${POSTGRES_USER};Password=${POSTGRES_PASSWORD};Database=${POSTGRES_DB};Minimum Pool Size=10;Maximum Pool Size=10;Multiplexing=true
+
+# OpenTelemetry configuration
+# Note: The OpenTelemetry Collector must be running and accessible at the specified endpoint
+# This example uses the default endpoint for the OpenTelemetry Collector
+OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-lgtm:4317
+OTEL_METRIC_EXPORT_INTERVAL=5000
