--- a/.github/workflows/main-release-webclient.yml
+++ b/.github/workflows/main-release-webclient.yml
@@ -11,12 +11,11 @@ env:
   TRIM: true
   EXTRA_OPTIMIZE: true
   BUILD_CONFIGURATION: Release  
-  ASPNETCORE_ENVIRONMENT: Production
+  DB_CONNECTION_STRING: ${{ secrets.DB_CONNECTION_STRING }}
 
 jobs:
   setup-build-test:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -56,6 +55,8 @@ jobs:
   build-push-image:
     needs: setup-build-test
     runs-on: ubuntu-latest
+    env:
+      ASPNETCORE_ENVIRONMENT: Production  
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -88,6 +89,7 @@ jobs:
             EXTRA_OPTIMIZE=${{ env.EXTRA_OPTIMIZE }}
             BUILD_CONFIGURATION=${{ env.BUILD_CONFIGURATION }}
             ASPNETCORE_ENVIRONMENT=${{ env.ASPNETCORE_ENVIRONMENT }}
+            DB_CONNECTION_STRING=${{ env.DB_CONNECTION_STRING }}
 
   # container-test:
   #   needs: build-push-image
