--- a/src/GrpcServer/Dockerfile
+++ b/src/GrpcServer/Dockerfile
@@ -40,10 +40,12 @@ RUN dotnet publish "GrpcServer.csproj" --no-restore -c $BUILD_CONFIGURATION -p:A
 FROM base AS final
 
 ARG ASPNETCORE_ENVIRONMENT
+ARG DB_CONNECTION_STRING
 
 WORKDIR /app
 ENV ASPNETCORE_URLS=http://+:5020
 ENV ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT}
+ENV DB_CONNECTION_STRING=${DB_CONNECTION_STRING}
 EXPOSE 5020
 
 COPY --from=publish /app/publish .
