--- a/src/WebApi/Dockerfile
+++ b/src/WebApi/Dockerfile
@@ -40,9 +40,12 @@ RUN dotnet publish "WebApi.csproj" --no-restore -c $BUILD_CONFIGURATION -p:AOT=$
 FROM base AS final
 
 ARG ASPNETCORE_ENVIRONMENT
+ARG DB_CONNECTION_STRING
 
 WORKDIR /app
+ENV ASPNETCORE_URLS=http://+:5000
 ENV ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT}
+ENV DB_CONNECTION_STRING=${DB_CONNECTION_STRING}
 EXPOSE 8080
 
 COPY --from=publish /app/publish .
