--- a/src/IdentityApi/Dockerfile
+++ b/src/IdentityApi/Dockerfile
@@ -40,10 +40,12 @@ RUN dotnet publish "IdentityApi.csproj" --no-restore -c $BUILD_CONFIGURATION -p:
 FROM base AS final
 
 ARG ASPNETCORE_ENVIRONMENT
+ARG DB_CONNECTION_STRING
 
 WORKDIR /app
 ENV ASPNETCORE_URLS=http://+:5010
 ENV ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT}
+ENV DB_CONNECTION_STRING=${DB_CONNECTION_STRING}
 EXPOSE 5010
 
 COPY --from=publish /app/publish .
