Add CRUD endpoints for Project and Impediment entities
Introduces create, read, update, delete, and list endpoints for Project and Impediment entities in the WebApi layer, supporting both EF Core and Dapper repository patterns. Adds request/response models, validation, and DTO mapping for these endpoints. Updates IProjectRepository with ExistsAsync, implements it in ProjectRepository, and refines Organization endpoints and models for consistency. Adds System.Linq.Dynamic.Core for dynamic sorting and cleans up global usings.

--- a/src/WebApi/WebApi.csproj
+++ b/src/WebApi/WebApi.csproj
@@ -43,6 +43,7 @@
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		  <PrivateAssets>all</PrivateAssets>
 		</PackageReference>
+        <PackageReference Include="System.Linq.Dynamic.Core" Version="1.6.0.2" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -66,8 +67,8 @@
 	<PropertyGroup>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<NoWarn>CS1591</NoWarn>
-	</PropertyGroup>	
-	
+	</PropertyGroup>
+
 	<ItemGroup>
 		<InternalsVisibleTo Include="Integration.Tests" />
 	</ItemGroup>
