--- a/.github/workflows/main-release-grpcserver.yml
+++ b/.github/workflows/main-release-grpcserver.yml
@@ -34,9 +34,9 @@ jobs:
         working-directory: "./src/GrpcServer"      
         run: dotnet build "GrpcServer.csproj" -c ${{ env.BUILD_CONFIGURATION }} -p:AOT=${${{ env.AOT }}} -p:Trim=${${{ env.TRIM }}} -p:ExtraOptimize=${${{ env.EXTRA_OPTIMIZE }}}
 
-      - name: Unit Tests
-        working-directory: "./test/Application.Tests"
-        run: dotnet test   
+      # - name: Unit Tests
+      #   working-directory: "./test/Application.Tests"
+      #   run: dotnet test   
   
       - name: Architecture Tests
         working-directory: "./test/Architecture.Tests"
@@ -48,7 +48,7 @@ jobs:
           sleep 30        
 
       - name: Integration Tests
-        working-directory: "./test/Integration.Tests"
+        working-directory: "./test/WebApi.Integration.Tests"
         run: dotnet test
 
   build-push-image:
