--- a/src/IdentityApi/appsettings.json
+++ b/src/IdentityApi/appsettings.json
@@ -15,5 +15,8 @@
   "AspNetCoreInstrumentation": {
     "RecordException": "true"
   },
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=0c677755-a519-4e83-901d-508c6610e2d5;IngestionEndpoint=https://brazilsouth-1.in.applicationinsights.azure.com/;LiveEndpoint=https://brazilsouth.livediagnostics.monitor.azure.com/;ApplicationId=cdbdcb3c-6424-4ac0-804d-010223428fa3"
+  },  
   "AllowedHosts": "*"
 }
