Add Application Insights configuration
Introduced ApplicationInsights section with connection string to appsettings.json for telemetry integration.

--- a/src/GrpcServer/appsettings.json
+++ b/src/GrpcServer/appsettings.json
@@ -15,6 +15,9 @@
   "AspNetCoreInstrumentation": {
     "RecordException": "true"
   },
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=3ec1b105-805c-4716-bd07-a37b33e7a199;IngestionEndpoint=https://brazilsouth-1.in.applicationinsights.azure.com/;LiveEndpoint=https://brazilsouth.livediagnostics.monitor.azure.com/;ApplicationId=7c70e812-a327-4e87-9a3b-c5ff736d120a"
+  },  
   "Kestrel": {
     "EndpointDefaults": {
       "Protocols": "Http2"
