--- a/.github/workflows/build-check-webclient.yml
+++ b/.github/workflows/build-check-webclient.yml
@@ -42,41 +42,41 @@ jobs:
         working-directory: "./test/Architecture.Tests"
         run: dotnet test
 
-      - name: Build and Run Docker Compose for Integration Tests
+      # - name: Build and Run Docker Compose for Integration Tests
+      #   run: |
+      #     docker compose up db -d --build --force-recreate
+      #     sleep 30        
+
+      # - name: Integration Tests
+      #   working-directory: "./test/WebApi.Integration.Tests"
+      #   run: dotnet test
+
+  container-test:
+    needs: setup-build-test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+        with:
+            fetch-depth: 0
+
+      - name: Build and Run Docker Compose for Healthcheck Test
         run: |
-          docker compose up db -d --build --force-recreate
-          sleep 30        
+          docker compose up nginx -d --build --force-recreate
+          sleep 30
 
-      - name: Integration Tests
-        working-directory: "./test/WebApi.Integration.Tests"
-        run: dotnet test
-
-  # container-test:
-  #   needs: setup-build-test
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout Repository
-  #       uses: actions/checkout@v4
-  #       with:
-  #           fetch-depth: 0
-
-  #     - name: Build and Run Docker Compose for Healthcheck Test
-  #       run: |
-  #         docker compose up nginx -d --build --force-recreate
-  #         sleep 30
-
-  #     - name: Test Healthcheck Endpoint
-  #       run: |
-  #         for i in {1..20}; do
-  #           STATUS=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:5400/healthz)
-  #           echo "Attempt $i: Status $STATUS"            
-  #           if [ "$STATUS" -eq 200 ]; then
-  #             echo "Healthcheck passed with status $STATUS"
-  #             exit 0
-  #           else
-  #             echo "Healthcheck attempt $i failed with status $STATUS. Retrying in 5 seconds..."
-  #             sleep 5
-  #           fi
-  #         done
-  #         echo "Healthcheck failed after 20 attempts."
-  #         exit 1
+      - name: Test Healthcheck Endpoint
+        run: |
+          for i in {1..20}; do
+            STATUS=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:5400/healthz)
+            echo "Attempt $i: Status $STATUS"            
+            if [ "$STATUS" -eq 200 ]; then
+              echo "Healthcheck passed with status $STATUS"
+              exit 0
+            else
+              echo "Healthcheck attempt $i failed with status $STATUS. Retrying in 5 seconds..."
+              sleep 5
+            fi
+          done
+          echo "Healthcheck failed after 20 attempts."
+          exit 1
