--- a/.github/workflows/main-release-grpcserver.yml
+++ b/.github/workflows/main-release-grpcserver.yml
@@ -42,14 +42,14 @@ jobs:
         working-directory: "./test/Architecture.Tests"
         run: dotnet test
 
-      - name: Build and Run Docker Compose for Integration Tests
-        run: |
-          docker compose up db -d
-          sleep 30        
+      # - name: Build and Run Docker Compose for Integration Tests
+      #   run: |
+      #     docker compose up db -d
+      #     sleep 30        
 
-      - name: Integration Tests
-        working-directory: "./test/WebApi.Integration.Tests"
-        run: dotnet test
+      # - name: Integration Tests
+      #   working-directory: "./test/WebApi.Integration.Tests"
+      #   run: dotnet test
 
   build-push-image:
     needs: setup-build-test
@@ -91,35 +91,35 @@ jobs:
             ASPNETCORE_ENVIRONMENT=${{ env.ASPNETCORE_ENVIRONMENT }}
             DB_CONNECTION_STRING=${{ env.DB_CONNECTION_STRING }}
 
-  # container-test:
-  #   needs: build-push-image
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout Repository
-  #       uses: actions/checkout@v4
-  #       with:
-  #           fetch-depth: 0
+  container-test:
+    needs: build-push-image
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+        with:
+            fetch-depth: 0
 
-  #     - name: Build and Run Docker Compose for Healthcheck Test
-  #       run: |
-  #         docker compose -f compose.prod.yaml up nginx -d
-  #         sleep 30
+      - name: Build and Run Docker Compose for Healthcheck Test
+        run: |
+          docker compose -f compose.prod.yaml up nginx -d
+          sleep 30
 
-  #     - name: Test Healthcheck Endpoint
-  #       run: |
-  #         for i in {1..20}; do
-  #           STATUS=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:5300/healthz)
-  #           echo "Attempt $i: Status $STATUS"
-  #           if [ "$STATUS" -eq 200 ]; then
-  #             echo "Healthcheck passed with status $STATUS"
-  #             exit 0
-  #           else
-  #            echo "Healthcheck attempt $i failed with status $STATUS. Retrying in 5 seconds..."
-  #            sleep 5
-  #           fi
-  #         done
-  #         echo "Healthcheck failed after 20 attempts."
-  #         exit 1
+      - name: Test Healthcheck Endpoint
+        run: |
+          for i in {1..20}; do
+            STATUS=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:5300/healthz)
+            echo "Attempt $i: Status $STATUS"
+            if [ "$STATUS" -eq 200 ]; then
+              echo "Healthcheck passed with status $STATUS"
+              exit 0
+            else
+             echo "Healthcheck attempt $i failed with status $STATUS. Retrying in 5 seconds..."
+             sleep 5
+            fi
+          done
+          echo "Healthcheck failed after 20 attempts."
+          exit 1
 
   deploy-image-azure:
     needs: build-push-image
