Add support for additional gRPC server port 5021
Exposes port 5021 alongside 5020 for the GrpcServer service in Docker Compose and Dockerfile configurations. Updates Kestrel to listen on port 5021 for HTTP/2, enabling development and production environments to map host port 5301 to container port 5021.

--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -89,6 +89,8 @@ services:
     ports:
       # Development mapping: host port 5300 => container port 5020
       - "5300:5020"
+      # Development mapping: host port 5301 => container port 5021
+      - "5301:5021"
     healthcheck: *healthcheck-grpcserver
 
   webclient-cpnucleo:
