--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -81,6 +81,8 @@ services:
     ports:
       # Production port mapping: host port 5300 is forwarded to container port 5020
       - "5300:5020"
+      # Production port mapping: host port 5301 is forwarded to container port 5021
+      - "5301:5021"
     healthcheck: *healthcheck-grpcserver
     
   webclient-cpnucleo:
