--- a/src/GrpcServer/Dockerfile
+++ b/src/GrpcServer/Dockerfile
@@ -42,10 +42,11 @@ ARG ASPNETCORE_ENVIRONMENT
 ARG DB_CONNECTION_STRING
 
 WORKDIR /app
-ENV ASPNETCORE_URLS=http://+:5020
+ENV ASPNETCORE_URLS=https://+:5020;http://+:5021
 ENV ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT}
 ENV DB_CONNECTION_STRING=${DB_CONNECTION_STRING}
 EXPOSE 5020
+EXPOSE 5021
 
 COPY --from=publish /app/publish .
 ENTRYPOINT ["./GrpcServer"]
