Move Weather components to Pages/Weather and update csproj
Renamed Weather-related Razor components into the Pages/Weather directory for improved organization. Updated WebClient.csproj to add a project reference to WebApi.Client.

--- a/src/WebClient/WebClient.csproj
+++ b/src/WebClient/WebClient.csproj
@@ -50,4 +50,8 @@
 		<PackageReference Include="OpenTelemetry.Resources.Host" Version="1.11.0-beta.2" /> -->
 	</ItemGroup>
 
+	<ItemGroup>
+		<ProjectReference Include="..\WebApi.Client\WebApi.Client.csproj" />
+	</ItemGroup>
+
 </Project>
